# 3DAIGC-API

./: .env.example  .gitignore  .graphifyignore  .mcp.json  CLAUDE.md  LICENSE  README.md  docker-compose.yml  pyrightconfig.json  requirements-models-extra.txt  requirements.txt
.brain/: LOG.md  MEMORY.md  SESSION.md  SHARED.md
adapters/: __init__.py  arc2avatar_adapter.py  colmap_3dgs_adapter.py  hunyuan3d_adapter_v21.py  image_to_world_adapter.py  instant_meshes_adapter.py  kimodo_adapter.py  pixal3d_adapter.py  skintokens_adapter.py  trellis2_adapter.py  trellis_adapter.py  triposplat_adapter.py  unirig_adapter.py  worldmirror2_adapter.py  xatlas_adapter.py
api/: main_multiworker.py  main_singleworker.py  object_name.py
config/: models.yaml  system.yaml
core/: config.py
docs/: API_AVATAR_RIG_CONTRACT.md  ARC2AVATAR_TRACK.md  AVATAR_PIPELINE.md  LOCAL_DEPLOYMENT.md  MESH_WRAP_ROADMAP.md  MODEL_LICENSES.md  README.md  api_documentation.md
mcp/: .gitignore  pyproject.toml
mcp/daigc_mcp/: __init__.py  client.py  config.py  helpers.py  http_server.py  invoke.py  registry.py  runtime.py  server.py  spec.py  xr_voice_commands.py
mcp/daigc_mcp/tools/: __init__.py  discovery.py  files.py  jobs.py  mesh.py  rig.py  world.py
mcp/docs/: XR_VOICE_COMMANDS.md
mcp/scripts/: monitor_xr_ai_3daigc_stack.sh  run_http.sh  run_xr_ai_3daigc_stack.sh  start_prerequisites.sh  xr-spark-media-relay.mjs
mcp/tests/: test_tools.py  test_xr_voice_commands.py
mcp/yaml/: xr_ai_3daigc_overlay.yaml  xr_voice_commands.yaml
memory-bank/: kimodo-text-to-motion-ops.md
(+101 files in other folders)
